// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chips should render with cross 1`] = `
<div>
  <div
    class="list"
    data-testid="chips"
  >
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Ручка для пакета
      </span>
      <svg
        class="cross-svg"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.707 4.707a1 1 0 0 0-1.414-1.414L8 6.586 4.707 3.293a1 1 0 0 0-1.414 1.414L6.586 8l-3.293 3.293a1 1 0 1 0 1.414 1.414L8 9.414l3.293 3.293a1 1 0 0 0 1.414-1.414L9.414 8l3.293-3.293Z"
        />
      </svg>
    </a>
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Спортивные кружки
      </span>
      <svg
        class="cross-svg"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.707 4.707a1 1 0 0 0-1.414-1.414L8 6.586 4.707 3.293a1 1 0 0 0-1.414 1.414L6.586 8l-3.293 3.293a1 1 0 1 0 1.414 1.414L8 9.414l3.293 3.293a1 1 0 0 0 1.414-1.414L9.414 8l3.293-3.293Z"
        />
      </svg>
    </a>
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Пакеты пищевые
      </span>
      <svg
        class="cross-svg"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.707 4.707a1 1 0 0 0-1.414-1.414L8 6.586 4.707 3.293a1 1 0 0 0-1.414 1.414L6.586 8l-3.293 3.293a1 1 0 1 0 1.414 1.414L8 9.414l3.293 3.293a1 1 0 0 0 1.414-1.414L9.414 8l3.293-3.293Z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Chips should renders correctly 1`] = `
<div>
  <div
    class="list"
    data-testid="chips"
  >
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Ручка для пакета
      </span>
    </a>
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Спортивные кружки
      </span>
    </a>
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Пакеты пищевые
      </span>
    </a>
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Пакеты для заморозки
      </span>
    </a>
    <a
      class="item checked"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Домашние животные
      </span>
    </a>
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Дикие звери
      </span>
    </a>
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Крафт пакеты
      </span>
    </a>
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Интерьер
      </span>
    </a>
    <a
      class="item"
      data-testid="chips:item"
      role="button"
    >
      <span
        class="text"
      >
        Зоотовары
      </span>
    </a>
  </div>
</div>
`;
